src/main/java/com/example/demo/error/AuthenticationException.java
package com.example.demo.error;

public class AuthenticationException extends RuntimeException {
    public AuthenticationException(String message, Throwable cause) {
        super(message, cause);
    }
}
